cmake_minimum_required(VERSION 3.26)
project(competitiveProg)

set(CMAKE_CXX_STANDARD 14)

add_executable(competitiveProg
        "Bit Manipulation/README.md"
        "Divide and Conquer/README.md"
        "Dynamic Programming/README.md"
        "Game Theory/README.md"
        "Geometry/README.md"
        "Graph Algorithms/README.md"
        "Greedy Algorithms/README.md"
        "Math and Number Theory/README.md"
        "Sorting and Searching/BubbleSort.cpp"
        "String Algorithms/README.md"
        "Tree Algorithms/README.md")
